part_2/2_0_3/manifests/logpingpongnamespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: log-ping-pong-ns
  labels:
    name: log-ping-pong-ns
