part_2/2_0_3/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-ping-pong-app-svc
  namespace: log-ping-pong-ns
spec:
  type: ClusterIP
  selector:
    app: log-output-ping-pong-app
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 5000
    name: tcp-log-outut

  - port: 2346
    protocol: TCP
    targetPort: 5001
    name: tcp-ping-pong
